# vitaeforge

./: .gitignore  LICENSE  README.md  WHITEPAPER.md  changelog.md  main.py  pyproject.toml  requirements.txt
jobs/: jd_globant_data_engineer.txt  jd_globant_pm_insurance.txt  jd_python_developer.txt  jd_tsoft_project_manager.txt  jd_ventas_atencion_cliente.txt
src/application/: __init__.py  cv_generator.py
src/domain/: __init__.py  models.py
src/domain/ports/: __init__.py  ai_port.py
src/domain/use_cases/: __init__.py  ats_scorer.py  cv_editor.py  experience_enricher.py  jd_analyzer.py  profile_generator.py
src/domain/value_objects/: __init__.py  ats_result.py  jd_analysis.py
src/entrypoints/: cli.py
src/infrastructure/ai/: __init__.py  anthropic_adapter.py  factory.py  google_adapter.py  ollama_adapter.py  openai_adapter.py  registry.py
src/infrastructure/persistence/: __init__.py  cv_writer.py  loaders.py
src/infrastructure/renderer/: __init__.py  rendercv_runner.py
tests/: test_ai.py  test_cli.py  test_domain.py  test_editor.py  test_generator.py
themes/globant/: theme.yaml
themes/harmony/: Header.j2.typ  Preamble.j2.typ  SectionBeginning.j2.typ  SectionEnding.j2.typ  __init__.py  theme.yaml
themes/harmony/entries/: EducationEntry.j2.typ  ExperienceEntry.j2.typ  OneLineEntry.j2.typ
themes/moderncv/: theme.yaml
