[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csotelo-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rendercv>=2.6",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.50",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "ollama>=0.4",
]

[project.scripts]
vitaeforge = "entrypoints.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/application", "src/domain", "src/entrypoints", "src/infrastructure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.unittest]
start-dir = "tests"
pattern = "test_*.py"

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "pytest>=9.0.3",
    "rendercv[full]>=2.6",
]
